clash/src/policy/snapshots/clash__policy__compile__tests__compile_error_invalid_json.snap
---
source: clash/src/policy/compile.rs
expression: err
---
invalid match tree policy JSON: expected ident at line 1 column 2
