clash/src/policy/snapshots/clash__policy__compile__tests__compile_error_undefined_sandbox.snap
---
source: clash/src/policy/compile.rs
expression: err
---
match tree validation errors: sandbox reference 'nonexistent' not found in sandboxes map
