clash/src/policy/snapshots/clash__policy__compile__tests__compiled_fs_rule.snap
---
source: clash/src/policy/compile.rs
expression: policy
---
{
  "sandboxes": {},
  "tree": [
    {
      "condition": {
        "observe": "fs_op",
        "pattern": {
          "literal": {
            "literal": "read"
          }
        },
        "children": [
          {
            "condition": {
              "observe": "fs_path",
              "pattern": {
                "prefix": {
                  "literal": "/home/user/project"
                }
              },
              "children": [
                {
                  "decision": {
                    "allow": null
                  }
                }
              ]
            }
          }
        ]
      }
    }
  ],
  "default_effect": "deny"
}
