clash/src/policy/snapshots/clash__policy__compile__tests__compiled_net_rule.snap
---
source: clash/src/policy/compile.rs
expression: policy
---
{
  "sandboxes": {},
  "tree": [
    {
      "condition": {
        "observe": "net_domain",
        "pattern": {
          "literal": {
            "literal": "github.com"
          }
        },
        "children": [
          {
            "decision": {
              "allow": null
            }
          }
        ]
      }
    }
  ],
  "default_effect": "deny"
}
